# python-30-day-challenge-

./: .gitignore  30-DAY-ROADMAP.md  README.md  Readme.md  pyproject.toml
notebooks/: Numpy1.ipynb  Numpy2.ipynb  cleaning_missing.ipyb.ipynb  cleaning_outliers_strings.ipynb  pandas_2_transform.ipynb  pandas_3_advanced.ipynb  pandas_core1.ipynb  python_refresher.ipynb
