[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
]
